--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html,
 body {
    height: 89%;
 }
+
 .navbar {
    background-color: #E8E8E8;
    position: fixed;
@@ -31,27 +32,28 @@ body {
 .navbar p {
    color: black;
    padding: 2rem;
-   font-size:20px;
+   font-size: 20px;
 }
 
 table {
    margin-top: 10%;
    text-align: center;
-   width:100%;
+   width: 100%;
    border-collapse: collapse;
 }
 
 table th {
    padding: 1rem;
    border: 1px solid;
-   border-color:#E8E8E8;
+   border-color: #E8E8E8;
    background-color: rgb(153, 53, 53);
-   color:white;
+   color: white;
 }
+
 table td {
    border: 1px solid;
-   padding:1rem;
-   border-color:#E8E8E8;
+   padding: 1rem;
+   border-color: #E8E8E8;
 }
 
 footer {
@@ -59,17 +61,61 @@ footer {
    position: sticky;
    top: 100vh;
    background-color: #E8E8E8;
-   margin-top:2rem;
+   margin-top: 2rem;
 }
+
 button {
    background-color: rgb(153, 53, 53);
    border: none;
    color: white;
-   padding:0.5rem;
-   margin:1px;
-   border-radius:5px;
+   padding: 0.5rem;
+   margin: 1px;
+   border-radius: 5px;
    font-size: 16px;
 }
+
 button:hover {
    background-color: rgba(153, 53, 53, 0.678);
+}
+
+.createForm {
+   display: flex;
+   flex-direction: column;
+   width: 25%;
+   text-align: center;
+   margin-top: 2rem;
+   margin-left: 1rem;
+   gap: 0.5rem;
+}
+
+.createForm input[type=text] {
+   width: 100%;
+   padding: 0.5rem;
+   margin: 0 auto;
+   display: block;
+   border: 1px solid #ccc;
+   border-radius: 5px;
+   box-sizing: border-box;
+}
+
+.createForm select {
+   color: rgb(153, 53, 53);
+   border-radius: 5px;
+   padding: 0.5rem;
+   text-align: center;
+   border-color: rgb(153, 53, 53);
+   font-weight: bold;
+}
+
+select option {
+   padding: 0.5rem;
+   font-weight: bold;
+}
+
+select option:hover {
+   background-color: rgba(0, 0, 0, 0.1);
+}
+
+option:checked {
+   box-shadow: 0 0 10px 100px #cdcdca inset;
 }
